--- a/Student Dropout.ipynb
+++ b/Student Dropout.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "4            Above-7     M  "
       ]
      },
-     "execution_count": 212,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,20 +313,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 1, 0, 0, 0, 2, 1, 1, 2, 2, 2, 0, 2, 1, 2, 0, 1, 1, 1, 2, 0, 0,\n",
-       "       2, 2, 1, 1, 0, 2, 2, 0, 2, 2, 1, 0, 2, 2, 2, 2, 2, 2, 2, 0, 1, 2,\n",
-       "       0, 1, 0, 0, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 2, 1, 2, 1, 1, 0, 2, 0,\n",
-       "       1, 0, 1, 0, 2, 0, 2, 2, 1, 1, 2, 1, 1, 0, 0, 2, 2, 0, 2, 2, 2, 1,\n",
-       "       1, 2, 2, 2, 2, 2, 1, 0])"
+       "array(['M', 'L', 'H', 'H', 'H', 'M', 'L', 'L', 'M', 'M', 'M', 'H', 'M',\n",
+       "       'L', 'M', 'H', 'L', 'L', 'L', 'M', 'H', 'H', 'M', 'M', 'L', 'L',\n",
+       "       'H', 'M', 'M', 'H', 'M', 'M', 'L', 'H', 'M', 'M', 'M', 'M', 'M',\n",
+       "       'M', 'M', 'H', 'L', 'M', 'H', 'L', 'H', 'H', 'M', 'M', 'M', 'M',\n",
+       "       'L', 'M', 'M', 'M', 'M', 'M', 'M', 'L', 'M', 'L', 'L', 'H', 'M',\n",
+       "       'H', 'L', 'H', 'L', 'H', 'M', 'H', 'M', 'M', 'L', 'L', 'M', 'L',\n",
+       "       'L', 'H', 'H', 'M', 'M', 'H', 'M', 'M', 'M', 'L', 'L', 'M', 'M',\n",
+       "       'M', 'M', 'M', 'L', 'H'], dtype=object)"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,12 +337,13 @@
    "source": [
     "###Lets predict the result\n",
     "y_pred=classifier.predict(x_test)\n",
+    "y_pred=LE.inverse_transform(y_pred)\n",
     "y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,23 +352,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7708333333333334"
-      ]
-     },
-     "execution_count": 226,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "score"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
